--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ modGroup = net.glease.autoime
 
 # Whether to use modGroup as the maven publishing group.
 # Due to a history of using JitPack, the default is com.github.GTNewHorizons for all mods.
-useModGroupForPublishing = false
+useModGroupForPublishing = true
 
 # Updates your build.gradle and settings.gradle automatically whenever an update is available.
 autoUpdateBuildScript = false
@@ -80,7 +80,7 @@ usesMixins = true
 usesMixinDebug = true
 
 # Specify the location of your implementation of IMixinConfigPlugin. Leave it empty otherwise.
-mixinPlugin = MixinPlugin
+mixinPlugin = AutoIMEMixinPlugin
 
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
 mixinsPackage = mixins
@@ -92,7 +92,7 @@ coreModClass =
 
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod ( = some class
 # that is annotated with @Mod) you want this to be true. When in doubt: leave it on false!
-containsMixinsAndOrCoreModOnly = false
+containsMixinsAndOrCoreModOnly = true
 
 # Enables Mixins even if this mod doesn't use them, useful if one of the dependencies uses mixins.
 forceEnableMixins = true
@@ -103,10 +103,10 @@ usesShadowedDependencies = false
 
 # If disabled, won't remove unused classes from shadowed dependencies. Some libraries use reflection to access
 # their own classes, making the minimization unreliable.
-minimizeShadowedDependencies = true
+minimizeShadowedDependencies = false
 
 # If disabled, won't rename the shadowed classes.
-relocateShadowedDependencies = true
+relocateShadowedDependencies = false
 
 # Adds the GTNH maven, CurseMaven, IC2/Player maven, and some more well-known 1.7.10 repositories.
 includeWellKnownRepositories = false
@@ -164,7 +164,7 @@ curseForgeRelations =
 # Uncomment this to disable Spotless checks.
 # This should only be uncommented to keep it easier to sync with upstream/other forks.
 # That is, if there is no other active fork/upstream, NEVER change this.
-# disableSpotless = true
+disableSpotless = true
 
 # Uncomment this to disable Checkstyle checks (currently wildcard import check).
 # disableCheckstyle = true
