add sign compat

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,6 +35,7 @@
  */
 dependencies {
     implementation group: 'com.github.GTNewHorizons', name: 'BetterQuesting', version: '3.6.0-GTNH'
+    implementation(deobfCurse("bibliocraft-228027:2423369"))
     implementation("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
     // https://mvnrepository.com/artifact/net.java.dev.jna/jna
     implementation group: 'net.java.dev.jna', name: 'jna', version: '5.14.0'
