--- a/gradle.properties
+++ b/gradle.properties
@@ -109,12 +109,12 @@ minimizeShadowedDependencies = false
 relocateShadowedDependencies = false
 
 # Adds the GTNH maven, CurseMaven, IC2/Player maven, and some more well-known 1.7.10 repositories.
-includeWellKnownRepositories = false
+includeWellKnownRepositories = true
 
 # Change these to your Maven coordinates if you want to publish to a custom Maven repository instead of the default GTNH Maven.
 # Authenticate with the MAVEN_USER and MAVEN_PASSWORD environment variables.
 # If you need a more complex setup disable maven publishing here and add a publishing repository to addon.gradle.
-usesMavenPublishing = true
+usesMavenPublishing = false
 
 # Maven repository to publish the mod to.
 # mavenPublishUrl = https\://nexus.gtnewhorizons.com/repository/releases/
