fix compat with screen with multiple text boxes

--- a/gradle.properties
+++ b/gradle.properties
@@ -92,7 +92,7 @@ coreModClass =
 
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod ( = some class
 # that is annotated with @Mod) you want this to be true. When in doubt: leave it on false!
-containsMixinsAndOrCoreModOnly = true
+containsMixinsAndOrCoreModOnly = false
 
 # Enables Mixins even if this mod doesn't use them, useful if one of the dependencies uses mixins.
 forceEnableMixins = true
