--- a/.github/workflows/release-tags.yml
+++ b/.github/workflows/release-tags.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build the mod
 #        run: ./gradlew --build-cache --info --stacktrace -PmavenPublishUrl='${{ env.MAVEN_PUBLISHING_URL }}' assemble
-        run: ./gradlew --build-cache --info --stacktrace -PkeyStore=keystore.jks -PkeyStoreAlias='${{ secrets.KEYSTORE_ALIAS }}' -PkeyStoreKeyPass='${{ secrets.KEYSTORE_PASSPHARSE}}' assemble
+        run: ./gradlew --build-cache --info --stacktrace "-PkeyStore=keystore.jks" "-PkeyStoreAlias=${{ secrets.KEYSTORE_ALIAS }}" -PkeyStoreKeyPass="${{ secrets.KEYSTORE_PASSPHARSE }}" assemble && ./gradlew --stop
 
       # Continue on error in the following steps to make sure releases still get made even if one of the methods fails
 
