--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -42,4 +42,5 @@ dependencies {
     // https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.14.0'
     implementation group: 'com.github.GTNewHorizons', name: 'Steve-s-Factory-Manager', version: '1.2.3-GTNH', classifier: 'dev'
+    implementation rfg.deobf('maven.modrinth:journeymap:5.2.9')
 }
